# scotty

./: .beans.yml  .dockerignore  .env.1password  .fabfile.yaml  .gitignore  .gitlab-ci.yml  .hadolint.yaml  .jjconfig.toml  .kkignore  .mise.toml  AGENTS.md  AGENTS.ms  CHANGELOG.md  CLAUDE.md  CNAME  Cargo.toml  Dockerfile  LICENSE  LOCAL_OAUTH_TESTING.md  README.md  SKILL.md  architecture.html  authorization.html  changelog.html  changelog.md  cli.html  cliff.toml  configuration.html  default-backend.html  docker-compose.observability.yml  docker-compose.yml  first-steps.html  guide.html  index.html  installation.html  oauth-authentication.html  observability.html  otel-collector-config.yaml  readme.md  release-please-config.json  (+3 more)
.beads/: .gitignore  config.yaml  issues.jsonl
scotty/: CHANGELOG.md  Cargo.toml  readme.md
scotty-core/: CHANGELOG.md  Cargo.toml  readme.md
scotty-core/src/: lib.rs  logo.rs  version.rs
scotty-core/src/admin/: requests.rs  responses.rs
scotty-core/src/api/: mod.rs  server_info.rs
scotty-core/src/apps/: app_data.rs  create_app_request.rs  file_list.rs  mod.rs  shared_app_list.rs
scotty-core/src/apps/app_data/: container.rs  data.rs  mod.rs  service.rs  settings.rs  status.rs  ttl.rs
scotty-core/src/auth/: mod.rs  oauth_types.rs
scotty-core/src/authorization/: mod.rs  permission.rs
scotty-core/src/http/: client.rs  error.rs  mod.rs  retry.rs  tls.rs
scotty-core/src/notification_types/: mod.rs
scotty-core/src/output/: mod.rs  unified_output.rs
scotty-core/src/settings/: api_server.rs  app_blueprint.rs  apps.rs  custom_action.rs  custom_action_tests.rs  docker.rs  files.rs  loadbalancer.rs  mod.rs  notification_services.rs  output.rs  rate_limiting.rs  scheduler_interval.rs  shell.rs
scotty-core/src/tasks/: mod.rs  task_details.rs
scotty-core/src/utils/: compose.rs  domain_hash.rs  format.rs  mod.rs  secret.rs  sensitive_data.rs  serde.rs  slugify.rs
scotty-core/src/websocket/: message.rs  ts_bindings.rs
scotty-types/: CHANGELOG.md  Cargo.toml  README.md
scotty-types/src/: files.rs  lib.rs
scotty/examples/: bollard_spike.rs
scotty/src/: app_state.rs  http.rs  init_telemetry.rs  lib.rs  main.rs  state_machine.rs  static_files.rs  stop_flag.rs
scotty/src/api/: auth_core.rs  basic_auth.rs  bearer_auth_tests.rs  error.rs  message.rs  message_handler.rs  mod.rs  oauth_flow_tests.rs  router.rs  secure_response.rs  secure_response_test.rs  test_utils.rs  ws.rs
scotty/src/api/handlers/: blueprints.rs  info.rs  login.rs  login_test.rs  mod.rs  tasks.rs
scotty/src/api/handlers/admin/: assignments.rs  mod.rs  permissions.rs  roles.rs  scopes.rs
scotty/src/api/handlers/apps/: create.rs  custom_action.rs  list.rs  logs.rs  mod.rs  notify.rs  run.rs  shell.rs
scotty/src/api/handlers/groups/: list.rs
scotty/src/api/handlers/scopes/: list.rs
scotty/src/api/middleware/: authorization.rs
scotty/src/api/rate_limiting/: config.rs  extractors.rs  metrics.rs  middleware.rs  mod.rs  tests.rs
scotty/src/api/rest/: mod.rs
scotty/src/api/rest/handlers/: blueprints.rs  files.rs  health.rs  info.rs  landing.rs  login.rs  login_test.rs  mod.rs
scotty/src/api/rest/handlers/admin/: assignments.rs  custom_actions.rs  mod.rs  roles.rs  scopes.rs
scotty/src/api/rest/handlers/apps/: create.rs  custom_action.rs  custom_action_management.rs  list.rs  mod.rs  notify.rs  run.rs  shell.rs
scotty/src/api/rest/handlers/scopes/: list.rs
scotty/src/api/websocket/: client.rs  message.rs  messaging.rs  mod.rs
scotty/src/api/websocket/handlers/: auth.rs  logs.rs  mod.rs  shell.rs  tasks.rs
scotty/src/docker/: create_app.rs  destroy_app.rs  docker_compose.rs  find_apps.rs  helper.rs  loadbalancer.rs  mod.rs  purge_app.rs  rebuild_app.rs  run_app.rs  run_app_custom_action.rs  setup.rs  stop_app.rs  ttl_checker.rs  validation.rs
scotty/src/docker/loadbalancer/: factory.rs  haproxy.rs  mod.rs  traefik.rs  types.rs
scotty/src/docker/services/: logs.rs  logs_test.rs  mod.rs  shell.rs  shell_test.rs
scotty/src/docker/state_machine_handlers/: context.rs  create_load_balancer_config.rs  mod.rs  network_handler.rs  run_docker_compose_handler.rs  run_docker_login_handler.rs  run_post_actions_handler.rs  run_task_and_wait.rs  save_files_handler.rs  save_settings_handler.rs  set_finished_handler.rs  task_completion_handler.rs  wait_for_all_containers_handler.rs
scotty/src/metrics/: app_list.rs  http.rs  init.rs  instruments.rs  memory.rs  mod.rs  noop.rs  otel_recorder.rs  recorder_trait.rs  shell.rs  tasks.rs  tokio_runtime.rs  websocket.rs
scotty/src/notification/: gitlab.rs  log.rs  mattermost.rs  mod.rs  notify.rs  webhook.rs
scotty/src/oauth/: cleanup.rs  client.rs  device_flow.rs  handlers.rs  metrics.rs  mod.rs
scotty/src/onepassword/: api.rs  env_substitution.rs  item.rs  lookup.rs  mod.rs
scotty/src/services/: authorization.rs  mod.rs
scotty/src/services/authorization/: casbin.rs  config.rs  fallback.rs  mod.rs  service.rs  tests.rs  types.rs
scotty/src/settings/: config.rs
scotty/src/tasks/: manager.rs  mod.rs  output_streaming.rs  timed_buffer.rs
scotty/tests/: authorization_domain_test.rs  test_bearer_auth.yaml  test_docker_registry_password.yaml  test_dotenv_loading.rs  test_files_endpoint.rs  test_oauth_auth.yaml  test_shell_websocket_e2e.rs
scotty/tests/fixtures/casbin/: model.conf  policy.yaml
scottyctl/: CHANGELOG.md  Cargo.toml  readme.md
scottyctl/src/: api.rs  cli.rs  context.rs  lib.rs  main.rs  preflight.rs  websocket.rs
scottyctl/src/auth/: cache.rs  config.rs  device_flow.rs  mod.rs  storage.rs
scottyctl/src/commands/: admin.rs  apps.rs  auth.rs  blueprints.rs  mod.rs  notify.rs  test.rs
scottyctl/src/commands/apps/: actions.rs  lifecycle.rs  list.rs  logs.rs  management.rs  mod.rs  shell.rs
scottyctl/src/commands/apps/cp/: mod.rs  spec.rs  stream.rs
scottyctl/src/utils/: files.rs  formatting.rs  mod.rs  parsers.rs  progress_tracker.rs  status_line.rs  tracing_layer.rs  ui.rs
scottyctl/tests/: test_auth_status.rs
ts-generator/: CHANGELOG.md  Cargo.toml
ts-generator/src/: main.rs
(+659 files in other folders)
