[workspace]
members = ["scotty-core", "scotty", "scottyctl", "scotty-types", "ts-generator"]
resolver = "2"

[workspace.package]
version = "0.2.0-alpha.1"
edition = "2021"
rust-version = "1.86"
description = "scotty is a Micro-PaaS which helps you to administer a bunch of docker-compose-based applications. It comes with an API and a cli"
authors = ["Stephan Maximilian Huber <stephan@factorial.io>"]
repository = "https://github.com/factorial-io/scotty"
license-file = "LICENSE"

[workspace.dependencies]
anyhow = "1.0.89"
axum = { version = "0.8.0", features = ["ws", "macros"] }
bollard = "0.19.0"
config = "0.15.0"
readonly = "0.2.12"
serde = "1.0.210"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.2"
serde_json = { version = "1.0.128", features = [] }
tokio = { version = "1.44.2", features = [
    "fs",
    "sync",
    "time",
    "rt",
    "rt-multi-thread",
    "macros",
    "signal",
    "process",
] }
tokio-metrics = "0.3"
tracing = "0.1.40"
tracing-subscriber = "0.3"
ts-rs = "11.0"
opentelemetry = { version = "0.31.0", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.31", features = [
    "rt-tokio",
    "metrics",
], default-features = false }
tracing-opentelemetry = "0.32"
init-tracing-opentelemetry = { version = "0.32.1", features = [
    "otlp",
    "tracing_subscriber_ext",
] }
axum-tracing-opentelemetry = "0.32.1"
opentelemetry-otlp = { version = "0.31.0", features = [
    "grpc-tonic",
    "reqwest-client",
    "reqwest-rustls",
    "http-proto",
    "tls",
    "metrics",
] }

utoipa = { version = "5.3", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum", "reqwest"] }
utoipa-redoc = { version = "6.0", features = ["axum"] }
utoipa-rapidoc = { version = "6.0", features = ["axum"] }
utoipa-axum = "0.2"

tower-http = { version = "0.6.1", features = ["cors", "fs"] }
tower_governor = "0.8"
governor = "0.10"
tower = { version = "0.5", features = ["util"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.30"
uuid = { version = "1.10", features = ["v4", "serde"] }
reqwest = { version = "0.12.8", features = ["json"] }
thiserror = "2.0.0"
clokwerk = { version = "0.4.0", features = ["async"] }
walkdir = "2.5.0"
ignore = "0.4"
chrono = { version = "0.4.38", features = ["serde"] }
tokio-stream = "0.1.16"
serde_norway = "0.9.42"
regex = "1.11.0"
tabled = { version = "0.20.0", features = ["ansi"] }
owo-colors = "4.1.0"
async-trait = "0.1.83"
base64 = "0.22.1"
path-clean = "1.0.1"
bcrypt = "0.17.0"
maplit = "1.0.2"
urlencoding = "2.1.3"
deunicode = "1"
dotenvy = "0.15.7"
url = "2.5"
include_dir = "0.7.3"
mime_guess = "2.0.4"
semver = "1.0"
casbin = { version = "2.8", default-features = false, features = ["runtime-tokio", "cached"] }
secrecy = { version = "0.10", features = ["serde"] }
subtle = "2.6"
zeroize = "1.8"
sysinfo = "0.33"
once_cell = "1.20"
num_cpus = "1.16"
flate2 = "1.0"
wiremock = "0.6"

[workspace.metadata.release]
pre-release-hook = ["sh", "-c", "git cliff -o CHANGELOG.md --tag {{version}}"]
sign-tag = true
pre-release-replacements = [ ]

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH",
]
[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH",
]
