[workspace]
members = ["scotty-core", "scotty", "scottyctl", "scotty-types", "ts-generator"]
resolver = "2"

[workspace.package]
version = "0.2.9"
edition = "2021"
rust-version = "1.86"
description = "scotty is a Micro-PaaS which helps you to administer a bunch of docker-compose-based applications. It comes with an API and a cli"
authors = ["Stephan Maximilian Huber <stephan@factorial.io>"]
repository = "https://github.com/factorial-io/scotty"
license-file = "LICENSE"

[workspace.dependencies]
anyhow = "1.0.89"
axum = { version = "0.8.0", default-features = false, features = ["http1", "http2", "tokio", "tower-log", "matched-path", "json", "ws", "macros"] }
bollard = { version = "0.20.0", default-features = false, features = ["ssl", "chrono", "http", "pipe"] }
config = { version = "0.15.0", default-features = false, features = ["yaml", "toml"] }
readonly = "0.2.12"
serde = { version = "1.0.210", features = ["derive"] }
clap = { version = "4.5", default-features = false, features = ["std", "derive", "env", "help", "usage", "error-context"] }
clap_complete = "4.2"
serde_json = { version = "1.0.128", default-features = false, features = ["std"] }
tokio = { version = "1.44.2", default-features = false, features = [
    "fs",
    "sync",
    "time",
    "rt",
    "rt-multi-thread",
    "macros",
    "signal",
    "process",
] }
tokio-metrics = "0.4"
tracing = { version = "0.1.40", default-features = false, features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log", "std"] }
ts-rs = "11.0"
opentelemetry = { version = "0.31.0", default-features = false, features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.31", default-features = false, features = [
    "rt-tokio",
    "metrics",
] }
tracing-opentelemetry = { version = "0.32", default-features = false }
init-tracing-opentelemetry = { version = "0.32.1", default-features = false, features = [
    "otlp",
    "tracing_subscriber_ext",
] }
axum-tracing-opentelemetry = { version = "0.32.1", default-features = false }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["metrics"] }

utoipa = { version = "5.4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0", default-features = false, features = ["axum"] }
utoipa-redoc = { version = "6.0", default-features = false, features = ["axum"] }
utoipa-rapidoc = { version = "6.0", default-features = false, features = ["axum"] }
utoipa-axum = "0.2"

tower-http = { version = "0.6.1", default-features = false, features = ["cors", "fs", "trace"] }
tower_governor = "0.8"
governor = "0.10"
tower = { version = "0.5", default-features = false, features = ["util"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["rustls-tls-native-roots"] }
futures-util = { version = "0.3.30", default-features = false, features = ["std"] }
uuid = { version = "1.10", default-features = false, features = ["v4", "serde"] }
reqwest = { version = "0.13.0", default-features = false, features = ["json", "rustls-tls", "http2", "charset", "stream"] }
thiserror = "2.0.0"
clokwerk = { version = "0.4.0", default-features = false, features = ["async"] }
walkdir = "2.5.0"
ignore = "0.4"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std", "serde"] }
tokio-stream = { version = "0.1.16", default-features = false }
serde_norway = "0.9.42"
regex = { version = "1.11.0", default-features = false, features = ["std", "perf"] }
tabled = { version = "0.20.0", default-features = false, features = ["std", "ansi"] }
owo-colors = { version = "4.1.0", default-features = false }
async-trait = "0.1.83"
base64 = "0.22.1"
path-clean = "1.0.1"
bcrypt = "0.18.0"
maplit = "1.0.2"
urlencoding = "2.1.3"
deunicode = "1"
dotenvy = "0.15.7"
url = { version = "2.5", default-features = false }
include_dir = "0.7.3"
mime_guess = { version = "2.0.4", default-features = false }
semver = { version = "1.0", default-features = false, features = ["std"] }
casbin = { version = "2.8", default-features = false, features = ["runtime-tokio", "cached"] }
secrecy = { version = "0.10", default-features = false, features = ["serde"] }
subtle = { version = "2.6", default-features = false }
zeroize = { version = "1.8", default-features = false, features = ["alloc"] }
sysinfo = { version = "0.38", default-features = false, features = ["system"] }
once_cell = "1.20"
num_cpus = "1.16"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
wiremock = "0.6"

[workspace.metadata.release]
pre-release-hook = ["bash", "-c", "cd $(git rev-parse --show-toplevel) && bash .cargo-husky/hooks/pre-push && bash scripts/generate-changelogs.sh {{version}}"]
sign-tag = true
pre-release-replacements = [ ]
# Disable per-crate verification since pre-release-hook already runs tests for the entire workspace
verify = false

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH",
]
[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH",
]
