[package]
name = "scotty-core"
version.workspace = true
edition.workspace = true
description = "Shared functionality for scotty server and CLI"
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[lib]
name = "scotty_core"
path = "src/lib.rs"

[features]
default = []
clap = ["dep:clap"]

[dependencies]
# Import shared types from scotty-types
scotty-types = { path = "../scotty-types" }

async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
serde_norway.workspace = true
tracing.workspace = true
tokio.workspace = true
utoipa.workspace = true
clokwerk.workspace = true
readonly.workspace = true
bollard.workspace = true
deunicode.workspace = true
url.workspace = true
reqwest.workspace = true
futures-util.workspace = true
semver.workspace = true
thiserror.workspace = true
secrecy.workspace = true
walkdir.workspace = true
owo-colors.workspace = true

axum.workspace = true
clap = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.20.0"
wiremock.workspace = true

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = [
    "user-hooks", # Use custom hooks from .cargo-husky/hooks/
]
