[package]
name = "scotty-types"
version = "0.1.0"
edition = "2021"

# Note: This crate is part of the parent workspace

[features]
default = []
utoipa = ["dep:utoipa"]

[dependencies]
# Only the minimal dependencies needed for type generation
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
ts-rs = { version = "10.0", features = ["chrono-impl", "uuid-impl"] }
utoipa = { version = "5.4", optional = true }