[package]
name = "scotty"
version.workspace = true
edition.workspace = true
description = "scotty is a small PaaS which helps you to administer a bunch of docker-compose-based applications. It comes with an API"
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum-tracing-opentelemetry.workspace = true
axum.workspace = true
base64.workspace = true
bollard.workspace = true
clap.workspace = true
chrono.workspace = true
config.workspace = true
dotenvy.workspace = true
futures-util.workspace = true
init-tracing-opentelemetry.workspace = true
include_dir.workspace = true
mime_guess.workspace = true
maplit.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
path-clean.workspace = true
readonly.workspace = true
regex.workspace = true
reqwest.workspace = true
tempfile = "3.10.1"
scotty-core = { path = "../scotty-core", features = ["utoipa"] }
scotty-types = { path = "../scotty-types" }
serde.workspace = true
serde_json.workspace = true
serde_norway.workspace = true
serde_yml = "0.0.12"
sha2 = "0.10"
subtle.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-metrics.workspace = true
tower-http.workspace = true
tower_governor.workspace = true
governor.workspace = true
tower.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
urlencoding.workspace = true
utoipa-rapidoc.workspace = true
utoipa-redoc.workspace = true
utoipa-swagger-ui.workspace = true
utoipa.workspace = true
uuid.workspace = true
walkdir.workspace = true
tokio-stream.workspace = true
clokwerk.workspace = true
casbin.workspace = true
bcrypt.workspace = true
sysinfo.workspace = true
once_cell.workspace = true
num_cpus.workspace = true
http-body-util = "0.1.3"
oauth2 = "4.4"
url = "2.0"

[dev-dependencies]
axum-test = "18.1.0"
tokio-test = "0.4.4"
wiremock = "0.6"

[package.metadata.release]
pre-release-hook = ["echo", "skipping"]
