[package]
name = "scottyctl"
version.workspace = true
edition.workspace = true
description = "CLI tool for scotty PaaS"
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
clap_complete.workspace = true
tokio.workspace = true
clap.workspace = true
chrono.workspace = true
base64.workspace = true
owo-colors.workspace = true
reqwest.workspace = true
tabled.workspace = true
walkdir.workspace = true
ignore.workspace = true
tracing.workspace = true
scotty-core = { path = "../scotty-core", features = ["clap", "utoipa"] }
scotty-types = { path = "../scotty-types" }
dotenvy.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
open = "5.0"
thiserror = { workspace = true }
semver = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
flate2.workspace = true
[[bin]]
name = "scottyctl"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.23"
